[package]
name = "adventofcode_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-next = "0.1.0"
anyhow = "1.0.66"
itertools = "0.10.5" 
regex = "1.7.0"
num = "0.4.0"
pathfinding = "4.1.1"
nom = "7.1.1"
indoc = "1.0.7"
petgraph = "0.6.2"
